# confidentiality

./: .gitignore  .travis.yml  Makefile  README.md
c/: .gitignore  CMakeLists.txt  confidentiality.pc.in
c/cmake/: FindmbedTLS.cmake  Hex.cmake
c/src/: backend.h.in  confidentiality.c  confidentiality.h.in
c/src/backend/: mbedtls.c  openssl.c
c/src/internal/: compare.c  compare.h  x25519.c  x25519.h
c/test/: CMakeLists.txt  test.c  test.h  test_authentication.c  test_main.c  test_run_dump_vectors.c  test_test.c
go/: Makefile  README.md  authenticate.go  authenticate_test.go  confidentiality.go  confidentiality_test.go  kex.go  kex_example_test.go  kex_test.go  message.go  message_test.go  net.go  net_test.go  rand.go  stream.go  stream_test.go  util.go
java/: .gitignore  .project  Makefile  build.gradle  settings.gradle
java/src/main/java/io/maze/confidentiality/: Authenticate.java  Key.java  Message.java  Stream.java
java/src/main/java/io/maze/confidentiality/internal/: Bytes.java  Curve25519.java  Field25519.java  Hex.java  X25519.java
java/src/test/java/io/maze/confidentiality/: AuthenticateTest.java  Helper.java  KeyTest.java  MessageTest.java  StreamTest.java
javascript/: LICENSE.Base64Binary  Makefile  confidentiality.js  package.json  test.html  test.js
python/: Makefile  confidentiality.py  requirements.txt
python/tests/: test_authenticate.py  test_exchange.py  test_message.py  test_stream.py
ruby/: Gemfile  Makefile  test_ecdsa.rb
ruby/lib/: confidentiality.rb
ruby/spec/: authenticate_spec.rb  exchange_spec.rb  message_spec.rb
testdata/: authenticate_test.txt  authentication-vectors.txt  exchange-vectors.txt  exchange_test.txt  generate-exchange.go  generate.go  message-vectors.txt  message_test.txt  stream-vectors.txt  stream_test.txt
